--- a/pom.xml
+++ b/pom.xml
@@ -263,7 +263,7 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
-					<failOnWarning>true</failOnWarning>
+					<failOnWarning>false</failOnWarning>
 					<ignoreNonCompile>true</ignoreNonCompile>
 				</configuration>
 				<executions>
